<resources>
    <string name="alternative_signin">Sign In With</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Time In Updated</string>
    <string name="geofence_transition_exited">Time Out Updated</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="permission_denied_explanation">Waiting permission for background location services access! Confirm to give permission for Location Services from Setting?</string>
    <string name="settings">Settings</string>
    <string name="attendance_type_attend_not_found">%1$s has no any Attend Type! Please apply to system manager.</string>
    <string name="attendance_take">%1$s [Distance: %2$d m.] [Accuracy: %3$s m.]</string>
    <string name="attendance_service_title">Attendance Service</string>
    <string name="attendance_service_started">Location Region Tracking is running</string>
    <string name="login_required">Waiting to login to start attendance services.</string>
    <string name="insufficient_location_permission">Waiting permission for background location services access!</string>
    <string name="no_geofence">User has no defined location fences! Background services are closed!</string>
    <string name="location_services">Location Service</string>
    <string name="error">Error</string>
    <string name="error_open_page">This page not opened! Would you like to open outside from app?</string>
    <string name="permlab_accessAllDownloads">Access all system downloads</string>
    <string name="permdesc_accessAllDownloads">Allows the app to view and modify all downloads initiated by any app on the system.</string>
    <string name="read_attachment_desc">Allows read your e-mail attachments.</string>
    <string name="read_attachment_label">Allows read your e-mail attachments.</string>
    <string name="permlab_mediaStorageWrite">Modify/delete internal media storage contents</string>
    <string name="permdesc_mediaStorageWrite">Allows an application to modify the contents of the internal media storage.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_name">K12NET Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="loading">Loading...</string>
    <string name="assessment_result">Assessment Result</string>
    <string name="achievement_guide">Achievement Guide</string>
    <string name="absence">Absence</string>
    <string name="homeworks">Homeworks</string>
    <string name="courses">Courses</string>
    <string name="announcement">Announcement</string>
    <string name="example">Example</string>
    <string name="showAll">Show All</string>
    <string name="complete">Complete</string>
	<string name="incomplete">Incomplete</string>
	<string name="partial">Partial</string>
	<string name="active">Active</string>
	<string name="mail">Messages</string>
	<string name="details">Details</string>
	<string name="loading_please_wait">Loading, Please Wait...</string>
	<string name="blank">Blank</string>
	<string name="student_list">Student List</string>
	<string name="grade">Grade</string>
	<string name="appName">K12NET Mobile</string>
	<string name="unknown">Unknown</string>
	<string name="passive">Passive</string>
	<string name="title">Title</string>
	<string name="startDate">Start Date</string>
	<string name="endDate">Due Date</string>
	<string name="status">Status</string>
	<string name="teacher">Teacher</string>
	<string name="description">Description</string>
	<string name="attachment">Attachment</string>
	<string name="noItem">There is no item</string>
	<string name="noHomework">There is no homework</string>
	<string name="hw_stat_complete">Complete</string>
	<string name="hw_stat_partial">Partial</string>
	<string name="hw_stat_notComplete">Not Complete</string>
	<string name="hw_stat_noReturn">No Return</string>
	<string name="hw_stat_stuAbsent">Stu. Absent</string>
	<string name="hw_stat_late">Late</string>
	<string name="hw_stat_unknown">Unknown</string>
	<string name="hw_stat_active">Active</string>
	<string name="noAnnouncement">There is no announcement</string>
	<string name="sender">Sender</string>
	<string name="noMail">There is no mail</string>
	<string name="sendDate">Send Date</string>
	<string name="replyMessageHint">Reply</string>
	<string name="writeMessageHint">Write your message</string>
	<string name="sendMessageHint">Send</string>
	<string name="deleteMessageHint">Delete</string>
	<string name="unreadMessageHint">Unread</string>
	<string name="shortDateFormat">MMMM dd</string>
	<string name="longDateFormat">MMMM dd, yyyy</string>
	<string name="fullDateFormat">EEEE, MMMM dd, yyyy</string>
	<string name="noAssessment">There is no assessment information</string>
	<string name="getMoreResult">Get More Result</string>
	<string name="messageType">Message Type</string>
	<string name="noConnection">There is no internet connection</string>
	<string name="noAchievement">There is no achievement information</string>
	<string name="rememberMe">Remember Me</string>
	<string name="section">Section</string>
	<string name="noSection">There is no section information</string>
	<string name="success">Success</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>
    <string name="results">Results</string>
    <string name="reports">Reports</string>
    <string name="assessment">Assessment</string>
    <string name="noSelection">Please select an assessment</string>
    <string name="date">Date</string>
    <string name="loginError">Login error, Please check username, password and network connection settings and try again.</string>
    <string name="appServerUrl">Application Server URL</string>
    <string name="fileServerUrl">File Server URL</string>
    <string name="save">Save</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="notAnswered">Not Answered</string>
    <string name="correctScorePercentage">%Correct</string>
    <string name="maxPossibleScore">Total</string>
    <string name="back">Back</string>
    <string name="createReport">Create Report</string>
    <string name="create">Create</string>
    <string name="assessmentNoSelected">Assessment should be selected</string>
    <string name="formNoSelected">Assessment form should be selected</string>
    <string name="courseName">Course</string>
    <string name="sectionName">Section</string>
    <string name="weeklyHour">Weekly Hour</string>
    <string name="login_failed">Login failed, please try again after checking username, password and connection settings</string>
    <string name="progress">Progress</string>
    <string name="score_card">Score Card</string>
    <string name="term_marks">Term Marks</string>
    <string name="fullDateTimeFormat">EEEE, MMMM dd, yyyy hh:mm:ss</string>
    <string name="sms">SMS</string>
    <string name="asisto_mail">Screen Message</string>
    <string name="receive_message">Asisto has a new message</string>
    <string name="receive_homework">Asisto has new homework information</string>
    <string name="receive_announcement">Asisto has new announcement</string>
    <string name="receive_assessment">Asisto has new assessment information</string>
    <string name="receive_achievement_guide">Asisto has new achiecement guide information</string>
    <string name="receive_section">Asisto has new section information</string>
    <string name="receive_error">Received data is contain some error</string>
    <string name="section_scores">Section Scores</string>
    <string name="gcm_register_ok">Notification register is completed successfully.</string>
    <string name="message_send_ok">Message is sent successfully</string>
    <string name="message_send_fail">Sending message is failed</string>
    <string name="noData">No data</string>
    <string name="login_name_school_database_fail">Name or School info can not be read from database</string>
    <string name="noNetwork">Network connection is not found</string>
    <string name="submitMessageFail">Submit message is failed</string>
    <string name="setUnread">Message is set as Unread</string>
    <string name="messageDeleted">Message is deleted</string>
    <string name="homeworkSubmitFailed">Homework submit is failed.</string>
    <string name="assessment_report_failed">Assessment report can not be start</string>
    <string name="assessment_report_ok">Assessment report is started successfully</string>
    <string name="error_gcm_installplayservices">Please install google play services to get notifications</string>
    <string name="error_gcm_devicenotsupported">Your device is not supported to get notification</string>
    <string name="noAttendance">There is no attendance</string>
    <string name="attendance">Attendance</string>
    <string name="sentByAsisto">Sent by Asisto ...</string>
    <string name="calendar">Calendar</string>
    <string name="logout">Log Out</string>
    <string name="noCalendarInfo">There is no calendar information</string>
    <string name="total">Total</string>
    <string name="microDateTimeFormat">MMM dd</string>
    <string name="noCalenderItem">There is no calendar record for this day</string>
    <string name="daily">Daily</string>
    <string name="period">Period</string>
    <string name="noAttendanceInMonth">There is no attendance record for this month</string>
    <string name="calendarAssignmentType">Ödev</string>
    <string name="startingDate">Start Date</string>
    <string name="startingTime">Start Time</string>
    <string name="location">Location</string>
    <string name="eventType">Event Type</string>
    <string name="endingDate">End Date</string>
    <string name="endingTime">End Time</string>
    <string name="logoutWarningMessage">Your session will be closed. Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="localString">en</string>
    <string name="webViewer">Asisto Web Viewer</string>
    <string name="videoDershane">Video Dershane</string>
    <string name="videoDersler">Video Dersler</string>
    <string name="assessment_type">Assessment Name</string>
    <string name="grading_assignment_type">Grading Assignment Type</string>
    <string name="publish_date">Publish Date</string>
    <string name="assesment_date">Assessment Date</string>
    <string name="max_score">Max Score</string>
    <string name="weight">Weight</string>
    <string name="form">Form</string>
    <string name="application">Administration</string>
    <string name="classroom">Room Number</string>
    <string name="observer">Staff</string>
    <string name="resetPassword">Forgot Password</string>
</resources>