<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#2E3154"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_login_icon"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/k12net_logo" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="350dp"
            android:layout_height="600dp"
            app:cardElevation="20dp"
            android:background="#80808080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoLayout"
            app:layout_constraintVertical_bias="0.15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00808080"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/main_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:background="#0A808080"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center"
                        android:text="@string/welcome"
                        android:textColor="#9252aa"
                        android:textSize="40sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/username">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_login_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTint="#9252aa"
                            android:drawableStart="@drawable/person"
                            android:fontFamily="@font/poppinsmedium"
                            android:inputType="textNoSuggestions"
                            android:textColor="#80808080" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:hint="@string/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTint="#9252aa"
                            android:drawableStart="@drawable/lock"
                            android:fontFamily="@font/poppinsmedium"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp">

                        <CheckBox
                            android:id="@+id/chk_remember_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="10dp"
                            android:checked="false"
                            android:text="@string/rememberMe"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btn_settings"
                            style="@style/Asisto_ButtonBorderless"
                            android:layout_width="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/action_settings"
                            android:textColor="#3F51B5" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/btn_login_submit"
                        style="@style/Asisto_Button"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:background="#9252aa"
                        android:gravity="center"
                        android:text="@string/login" />

                    <Button
                        android:id="@+id/btnResetPassword"
                        style="@style/Asisto_ButtonBorderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/resetPassword"
                        android:textColor="#3F51B5" />

                    <TextView
                        android:id="@+id/txt_alternative_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsbold"
                        android:gravity="center"
                        android:text="@string/alternative_signin"
                        android:layout_marginTop="10dp"
                        android:textColor="#9252aa" />

                    <LinearLayout
                        android:id="@+id/ly_providers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginHorizontal="15dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"/>

                    <LinearLayout
                        android:id="@+id/ly_cultures"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00808080"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/login"
                android:layout_marginBottom="50dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
